{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 356,
  "lineage": "9cec3cc2-685b-a259-cee1-a09d8dfe0e38",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-22T01:21:33.819-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/crested-archive-469119-u6/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/crested-archive-469119-u6/global/networks/cicd-dashboard-vpc",
            "priority": 1000,
            "project": "crested-archive-469119-u6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/crested-archive-469119-u6/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cicd-dashboard"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.cicd_vpc",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-22T01:21:33.825-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/crested-archive-469119-u6/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/crested-archive-469119-u6/global/networks/cicd-dashboard-vpc",
            "priority": 1000,
            "project": "crested-archive-469119-u6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/crested-archive-469119-u6/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cicd-dashboard"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.cicd_vpc",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000",
                  "5432",
                  "6379"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-22T01:21:33.314-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/crested-archive-469119-u6/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/crested-archive-469119-u6/global/networks/cicd-dashboard-vpc",
            "priority": 1000,
            "project": "crested-archive-469119-u6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/crested-archive-469119-u6/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cicd-dashboard"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.cicd_vpc",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-22T01:21:33.814-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/crested-archive-469119-u6/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/crested-archive-469119-u6/global/networks/cicd-dashboard-vpc",
            "priority": 1000,
            "project": "crested-archive-469119-u6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/crested-archive-469119-u6/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cicd-dashboard"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.cicd_vpc",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "cicd_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/crested-archive-469119-u6/global/networks/cicd-dashboard-vpc",
            "mtu": 1460,
            "name": "cicd-dashboard-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "3823851490254830062",
            "project": "crested-archive-469119-u6",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/crested-archive-469119-u6/global/networks/cicd-dashboard-vpc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "cicd_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-22T01:21:34.416-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/crested-archive-469119-u6/regions/us-central1/subnetworks/cicd-dashboard-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "cicd-dashboard-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/crested-archive-469119-u6/global/networks/cicd-dashboard-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "crested-archive-469119-u6",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/crested-archive-469119-u6/regions/us-central1/subnetworks/cicd-dashboard-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.cicd_vpc",
            "google_project_service.compute_api"
          ]
        }
      ]
    }
  ]
}